# Bank-Marketing_ML_group3

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bank_marketing_analysis.ipynb  docker-compose.yml  final_report.md  ml_project_presentation_requirements_based.pptx  pyproject.toml
data/sql/: schema.sql
docker/mlflow/: Dockerfile
docker/postgres/: init.sql
experiments/notebooks/: 01_eda.ipynb  02_model_experiments.ipynb
reports/: classification_report_logistic_regression.txt  classification_report_random_forest.txt  classification_report_xgboost.txt  descriptive_stats.csv  missing_values.csv  threshold_analysis_logistic_regression.csv  threshold_analysis_random_forest.csv  threshold_analysis_xgboost.csv  training_summary.csv
scripts/: run_eda.py  run_pipeline.py  validate_pipeline.py
src/: __init__.py  config.py
src/data/: database.py  ingest.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  train.py
src/visualization/: __init__.py  plots.py
