[project]
name = "bank-marketing-ml"
version = "0.1.0"
description = "Bank Marketing Term Deposit Subscription Prediction — ML Classification Pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Data
    "pandas>=2.1",
    "numpy>=1.26",
    "ucimlrepo>=0.0.7",

    # ML
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "imbalanced-learn>=0.12",

    # Experiment tracking
    "mlflow>=2.10",

    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",

    # Config
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",

    # Notebooks
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pre-commit>=3.6",
]

[project.scripts]
ingest    = "scripts.run_pipeline:run_ingest"
preprocess = "scripts.run_pipeline:run_preprocess"
train     = "scripts.run_pipeline:run_train"
evaluate  = "scripts.run_pipeline:run_evaluate"
pipeline  = "scripts.run_pipeline:run_full_pipeline"
eda       = "scripts.run_eda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
